Fix artist section alignment and lead title width for smaller resolutions

--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,7 @@
 .lead__image {
     max-width: 100%;
-    margin: 0px 148px 0px 148px;
+    margin: 0 auto;
+    display: block;
 }
 
 @media screen and (max-width: 768px) {
