--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -15,6 +15,13 @@
     }
 }
 
+@media screen and (max-width: 530px) {
+    .lead__title {
+        font-size: 4rem;
+        margin: 0px 20px 20px 20px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .lead__title {
         font-size: 4rem;
