--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,5 @@
 .place__image {
     grid-area: image;
-    width: 100%;}
+    width: 100%;
+    height: auto;
+}
